--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@newbish/round-half-even",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "A utility for tie-breaking rounding, also called Banker's Rounding or Commercial Rounding",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "nteractDesktop": "src/index.ts",
   "browser": "dist/round-half-even.min.js",
   "scripts": {
-    "build": "tsc -b",
+    "build": "tsc -b && npm run build:pack",
     "build:pack": "node_modules/.bin/webpack --config webpack.config.js",
     "test": "jest",
     "build:types": "tsc -d --declarationMap --emitDeclarationOnly --outFile round-half-even.min.d.ts"
