--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@newbish/round-half-even",
-  "version": "1.3.1",
+  "version": "1.3.1a",
   "description": "A utility for tie-breaking rounding, also called Banker's Rounding or Commercial Rounding",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
