--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@newbish/round-half-even",
-  "version": "1.3.1a",
+  "version": "1.3.1b",
   "description": "A utility for tie-breaking rounding, also called Banker's Rounding or Commercial Rounding",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -14,14 +14,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/schowdhuri/round-half-even.git"
+    "url": "git+https://github.com/newbish/round-half-even.git"
   },
   "author": "Subir Chowdhuri",
+  "contributors": [
+    "Keith Kikta (https://github.com/newbish)"
+  ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/schowdhuri/round-half-even/issues"
+    "url": "https://github.com/newbish/round-half-even/issues"
   },
-  "homepage": "https://github.com/schowdhuri/round-half-even#readme",
+  "homepage": "https://github.com/newbish/round-half-even#readme",
   "devDependencies": {
     "@babel/cli": "^7.21.5",
     "@babel/core": "^7.21.5",
