--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@newbish/round-half-even",
-  "version": "1.3.1b",
+  "name": "round-half-even-ts",
+  "version": "1.3.2",
   "description": "A utility for tie-breaking rounding, also called Banker's Rounding or Commercial Rounding",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/newbish/round-half-even.git"
+    "url": "git+https://github.com/tevpro/round-half-even-ts.git"
   },
   "author": "Subir Chowdhuri",
   "contributors": [
@@ -22,21 +22,12 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/newbish/round-half-even/issues"
+    "url": "https://github.com/tevpro/round-half-even-ts/issues"
   },
-  "homepage": "https://github.com/newbish/round-half-even#readme",
+  "homepage": "https://github.com/tevpro/round-half-even-ts#readme",
   "devDependencies": {
-    "@babel/cli": "^7.21.5",
-    "@babel/core": "^7.21.5",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-env": "^7.21.5",
-    "@babel/preset-typescript": "^7.21.5",
     "@jest/globals": "^29.5.0",
     "@types/jest": "^29.5.1",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^9.1.2",
-    "babel-preset-env": "^1.6.1",
-    "jasmine": "^3.6.4",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4",
