--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "round-half-even-ts",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "A utility for tie-breaking rounding, also called Banker's Rounding or Commercial Rounding",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@jest/globals": "^29.5.0",
     "@types/jest": "^29.5.1",
+    "fs-extra": "^11.2.0",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4",
